--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -1,7 +1,7 @@
 /* Gerais */
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(190, 253, 188);
+    background-color: rgb(221, 221, 221);
 }
 
 .row {
@@ -14,7 +14,7 @@ body {
 /* Navbar */
 
 header, .navbar{
-    background-color: rgba(23, 138, 13, 0.89);
+    background-color: #029625;
 }
 
 #nav-container{
@@ -38,7 +38,7 @@ h4{
 }
 
 #container_table{
-    box-shadow: 3px 3px rgba(5, 5, 5, 0.342);
+    box-shadow: 3px 4px 10px rgba(5, 5, 5, 0.555);
     margin-top: 100px;
     padding: 25px 0px 25px 0px; 
     background-color: rgb(255, 255, 255);
@@ -52,4 +52,16 @@ h4{
     margin: 0 auto;
     margin-top: 30px;
     width: 1000px;
+}
+
+/* footer */
+footer{
+    position:absolute;
+    bottom:5px;
+    width:100%;
+    color: rgb(61, 61, 61);
+}
+
+footer p{
+    text-align: center;
 }
