--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -45,7 +45,7 @@ h4{
     border-radius: 15px;
 }
 
-#table_disciplina{
+#table_paginas{
     border-collapse: collapse;
     font-size: 13px;
     font-weight: normal;
