--- a/assets/css/loginUm.css
+++ b/assets/css/loginUm.css
@@ -9,9 +9,6 @@ body{
     color: white;
 }
 
-.row{
-    margin: 0;
-}
 
 /*Logo*/
 #apply-area{
@@ -25,13 +22,20 @@ body{
 
 #apply-area .apply-box{
     padding: 60px;
-    margin-right: 0;
+    margin: 0px;
 }
 
-#posicao-logo{
-    margin: 0 auto;
-}
+
 /*Formulário*/
+
+h2{
+    text-align: center;
+    font-weight: bolder;
+}
+
+.col-md-4{
+    padding:0;
+}
 
 #posicao-formulario{
     background-color: #18a800;
@@ -40,12 +44,13 @@ body{
 
 #form{
     margin-top: 20px;
+    margin-right: 0px;
 }
 
 form{
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     margin-top: 70px;
 }
 
@@ -53,38 +58,99 @@ form input{
     border-radius: 10px;
     height: 45px;
     border: none;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     padding: 10px;
 }
 
+label{
+    margin: 0;
+    padding: 0;
+}
+
 #butao{
+    margin-top: 60px;
     background-color: #00390d;
     color:white;
     font-weight: bold;
 }
 
-img{
-    height: 50%;
-    width: 100%;
-    height: 10em;
-    align-items: center 
+#logoP{
+    display: none;
 }
 
-@media all and (max-width: 800px){
-    img{
-        
+#logoM{
+    display: none;
+}
+
+.vertical-align {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+@media all and (max-width: 767px){
+    .horizontal-align{
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
+    }
+
+    #logoG{
+        display:none;
+    }
+
+
+    #logoM{
+        display: none;
+    }
+
+    #logoP{
+        display: unset;
+    }
+
+    .col-md-8{
+        display: none;
+    }
+}
+
+
+@media all and (min-width:768px)and (max-width:1224px){
+    .horizontal-align{
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
+    }
+
+    #logoG{
+        display:none;
+    }
+
+    h2{
+        margin-top: 80px;
+        font-size: 50px;
+    }
+    #logoM{
+        display: unset;
+    }
+
+    #logoP{
+        display: none;
     }
     
     form{
-        margin: 0 10px;
-    }
-    
-    fieldset{
-        width: 100%;
-        margin: 0px;
+        font-size: 34px;
+        height: 50px;
+
     }
 
-    button{
-        float: right;
+    form input{
+        height: 470px;
+
+    }
+
+    .col-md-8{
+        display: none;
     }
 }
