--- a/assets/css/loginUm.css
+++ b/assets/css/loginUm.css
@@ -6,14 +6,13 @@
 
 body{
     font-family: "Roboto", sans-serif;
-    color: white;
+    color: black;
 }
 
 
 /*Logo*/
 #apply-area{
-    height: 100vh;
-  
+    height: 100vh;  
 }
 
 #apply-area .container-fluid, #apply-area .row{
@@ -21,8 +20,31 @@ body{
 }
 
 #apply-area .apply-box{
-    padding: 60px;
+    padding: 0px;
     margin: 0px;
+}
+
+#posicao-logo{
+    background-color: #17A400;
+}
+
+#logoP{
+    width: 270px;
+}
+
+
+.vertical-align {
+    position: relative;
+    top: 18%;
+    left: 47%;
+    transform: translateX(-50%);
+}
+
+#boneco{
+    position: fixed;
+    left: 0px;
+    bottom: 0px;  
+    width: 32%;
 }
 
 
@@ -31,40 +53,39 @@ body{
 h2{
     text-align: center;
     font-weight: bolder;
+    margin-top: 150px;
 }
 
-.col-md-4{
-    padding:0;
+.col-md #form{
+    margin: 0px auto;
 }
 
-#posicao-formulario{
-    background-color: #18a800;
-    margin: 0px;
-}
-
-#form{
-    margin-top: 20px;
-    margin-right: 0px;
+#divform{
+    margin:0 auto;
+    padding: 0px;
+    width: 440px;
 }
 
 form{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 440px;
     margin-top: 70px;
 }
 
 form input{
+    height: 40px;
     border-radius: 10px;
-    height: 45px;
     border: none;
     margin-bottom: 20px;
     padding: 10px;
+    background-color:#eef1f5;
 }
 
 label{
     margin: 0;
     padding: 0;
+    font-weight: bolder;
 }
 
 #butao{
@@ -72,22 +93,10 @@ label{
     background-color: #00390d;
     color:white;
     font-weight: bold;
+    width: 30%;
 }
 
-#logoP{
-    display: none;
-}
-
-#logoM{
-    display: none;
-}
-
-.vertical-align {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
+/* Responsivo 
 @media all and (max-width: 767px){
     .horizontal-align{
         position: relative;
@@ -153,4 +162,6 @@ label{
     .col-md-8{
         display: none;
     }
+    
 }
+*/
