--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -44,8 +44,7 @@ body{
     width: 30%;
     position: absolute;
     bottom: 0px;
-
-    
+    left: 0px;    
 }
 
 
@@ -55,6 +54,8 @@ h2{
     text-align: center;
     font-weight: bolder;
     margin-top: 150px;
+    margin-bottom: 30px;
+    
 }
 
 .col-md #form{
@@ -63,7 +64,7 @@ h2{
 
 #divform{
     margin:0 auto;
-    padding: 0px;
+    padding-top: 100px;
     width: 440px;
 }
 
@@ -94,11 +95,13 @@ label{
     background-color: #00390d;
     color:white;
     font-weight: bold;
-    width: 30%;
+    width: 40%;
 }
 
 /* Responsivo */
-@media all and (max-width: 1100px){
+
+/*Telas Tablet*/
+@media all and (max-width: 1024px){
     .col-md{
         background-color: #17A400;
         margin:0px auto;
@@ -114,9 +117,9 @@ label{
     {
         margin: 0 auto;
         padding-top: 200px;
-        width: 250px;
-        height: 70px;
-        background: transparent url('../img/brand/logoP.png') no-repeat left bottom;
+        width: 390px;
+        height: 110px;
+        background: transparent url('../img/brand/logoM.png') no-repeat left bottom;
 
     }
 
@@ -124,13 +127,36 @@ label{
         margin-top: 120px;
     }
 
+   
+    div#bonecoResp
+    {
+        margin: 0 auto;
+        padding-top: 200px;
+        width: 401px;
+        height: 381px;
+        background: transparent url('../img/brand/boneco_podio401.png') no-repeat left bottom;
+    }
+
     #boneco{
         left:200px;
+        bottom: 0;
         width: 50%;
+        display: none;
     }
+
 }
 
+/*Telas Celulares*/
 @media all and (max-width: 450px){
+    div#banner
+    {
+        margin: 0 auto;
+        padding-top: 200px;
+        width: 250px;
+        height: 70px;
+        background: transparent url('../img/brand/logoDC.png') no-repeat left bottom;
+    }
+
     form{
         width: 250px;
     }
@@ -157,7 +183,17 @@ label{
 
     #boneco{
         left: 65px;
-        width: 240px;
+        width: 220px;
     }
+
+    div#bonecoResp
+    {
+        margin: 0 auto;
+        padding-top: 200px;
+        width: 230px;
+        height: 193px;
+        background: transparent url('../img/brand/boneco-230.png') no-repeat left bottom;
+    }
+
 }
 
