--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -84,6 +84,20 @@ form input{
     background-color:#eef1f5;
 }
 
+.container{
+    padding: 0;
+}
+
+a{
+    color: black;
+}
+
+#remember{
+    display: inline;
+    height: 12.500px;
+    margin-right: 150px;
+}
+
 label{
     margin: 0;
     padding: 0;
@@ -95,7 +109,8 @@ label{
     background-color: #00390d;
     color:white;
     font-weight: bold;
-    width: 40%;
+    height: 30%;
+    cursor: pointer;
 }
 
 /* Responsivo */
@@ -138,9 +153,6 @@ label{
     }
 
     #boneco{
-        left:200px;
-        bottom: 0;
-        width: 50%;
         display: none;
     }
 
@@ -161,6 +173,10 @@ label{
         width: 250px;
     }
 
+    a{
+        color: black;
+    }
+
     #butao{
         margin:20px 0 0 0;
     }
@@ -168,9 +184,19 @@ label{
     #divform{
         padding: 0;
         width: 80%;
-
     }
 
+    .container{
+        margin: 0 auto;
+    }
+
+    #remember{
+        margin: 0;
+    }
+
+    a{
+        display: block;
+    }
     /*Logo Pequena*/
     div#banner{
         margin-bottom: 0px;
@@ -186,8 +212,7 @@ label{
         width: 220px;
     }
 
-    div#bonecoResp
-    {
+    div#bonecoResp{
         margin: 0 auto;
         padding-top: 200px;
         width: 230px;
