--- a/assets/css/loginota.css
+++ b/assets/css/loginota.css
@@ -14,7 +14,6 @@ body{
 .container {
     width: 100vw;
     height: 100vh;
-    background: #6C7A89;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -42,12 +41,14 @@ form {
 }
 
 input {
+    padding: 5px;
     width: 100%;
     height: 35px;
     margin-bottom: 20px;
 }
 
 input#caixinha{
+    padding: 0px;
     height: 15px;
     width: 15px;
     margin: 0px;
