--- a/assets/css/loginota.css
+++ b/assets/css/loginota.css
@@ -13,7 +13,7 @@ body{
 
 .container {
     width: 100vw;
-    height: 100vh;
+    height: 470px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -89,7 +89,9 @@ a:hover{
 }
 
 img{
-    display: flex;
-    align-self: flex-start;
-    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;  
+    margin-top: 40px;
+    margin-bottom: 10px;
 }
